[gd_scene load_steps=3 format=3 uid="uid://dbtrdkufj6t3g"]

[ext_resource type="Script" path="res://Chat_Window.gd" id="1_8dere"]
[ext_resource type="PackedScene" path="res://LabelMessage.tscn" id="2_flv33"]

[node name="Chat_Window" type="Panel"]
custom_minimum_size = Vector2(100, 100)
anchors_preset = -1
anchor_left = -0.012
anchor_top = -0.016
anchor_right = 0.225
anchor_bottom = 0.228
offset_left = 14.824
offset_top = 11.368
offset_right = 133.8
offset_bottom = 115.256
script = ExtResource("1_8dere")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
offset_right = 390.0
offset_bottom = 234.0
follow_focus = true

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2

[node name="LabelMessage5" parent="ScrollContainer/VBoxContainer" instance=ExtResource("2_flv33")]
layout_mode = 2

[node name="LabelMessage" parent="ScrollContainer/VBoxContainer" instance=ExtResource("2_flv33")]
layout_mode = 2

[node name="LabelMessage7" parent="ScrollContainer/VBoxContainer" instance=ExtResource("2_flv33")]
layout_mode = 2

[node name="LabelMessage2" parent="ScrollContainer/VBoxContainer" instance=ExtResource("2_flv33")]
layout_mode = 2

[node name="LabelMessage3" parent="ScrollContainer/VBoxContainer" instance=ExtResource("2_flv33")]
layout_mode = 2

[node name="LabelMessage4" parent="ScrollContainer/VBoxContainer" instance=ExtResource("2_flv33")]
layout_mode = 2

[node name="LabelMessage6" parent="ScrollContainer/VBoxContainer" instance=ExtResource("2_flv33")]
layout_mode = 2

[node name="TextEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_top = 232.0
offset_right = 390.0
offset_bottom = 261.0
placeholder_text = "Write your message here"

[connection signal="gui_input" from="TextEdit" to="." method="_on_text_edit_gui_input"]
[connection signal="text_submitted" from="TextEdit" to="." method="_on_text_edit_text_submitted"]
